# lio-leve

./: .env  .env.example  .gitignore  .markdownlint.json  AGENTS.md  AI_RULES.md  CLAUDE.md  DYAD_INSTRUCTIONS.md  README.md  README_OLD.md  docker-compose.dev.yml  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml
api/: .env.docker.example  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 20250219_0001_initial_schema.py  20251120_0002_expand_assettype_enum.py  20251120_0003_fix_allocation_division.py  20251120_0004_coalesce_allocation_view.py  20251120_0005_add_suggestions.py
api/app/: main.py
api/app/api/: deps.py
api/app/api/v1/: router.py
api/app/api/v1/endpoints/: __init__.py  assets.py  auth.py  blog.py  dashboard.py  profile.py  quotes.py  suggestions.py  transactions.py
api/app/core/: security.py  settings.py
api/app/db/: session.py
api/app/models/: __init__.py  asset.py  blog_post.py  enums.py  profile.py  suggestion.py  transaction.py  user.py
api/app/schema/: asset.py  auth.py  blog.py  dashboard.py  profile.py  quote.py  suggestion.py  transaction.py  user.py
api/app/services/: __init__.py  quote_service.py  user_service.py
api/app/worker/: __init__.py  celery_app.py
api/app/worker/tasks/: __init__.py  quotes.py
api/scripts/: seed_admin.py
docs/: DEPLOY_VPS_INVESTORION.md  Plano de Desenvolvimento_ MVP do Aplicativo de Investimentos.md  Plano_Tecnico_Implementacao_Melhorias.md  plano-migracao-fastapi.md  prompt-preparacao-supabase-dyad.md  (+1 more)
(+58 files in other folders)
