[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investorion-api"
version = "0.1.0"
description = "Backend FastAPI para a plataforma Investorion"
readme = "README.md"
authors = [{ name = "Investorion Team" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "alembic>=1.13,<2.0",
  "pydantic-settings>=2.6,<3.0",
  "email-validator>=2.2,<3.0",
  "python-dotenv>=1.0,<2.0",
  "python-multipart>=0.0.9,<1.0",
  "httpx>=0.27,<0.28",
  "PyJWT>=2.9,<3.0",
  "passlib[bcrypt]>=1.7,<2.0",
  "bcrypt>=4.0,<5.0",
  "celery[redis]>=5.4,<6.0",
  "redis>=5.0,<6.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6,<0.7",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<0.25"
]

[tool.setuptools.packages.find]
where = ["."]
